hard-gists/9655195/run.log
=== Docker Run Log for 9655195 ===
Started at: Mi 29. Okt 18:29:03 CET 2025

[2025-10-29 18:29:04] START: Running container for 9655195
[2025-10-29 18:29:04] SUCCESS: Container 0b52f8a2fff6be3ac3806772caff8100f80d94c66fb5193edc904189802305e8 started for 9655195
=== Container logs for 9655195 ===
  File "/snippet.py", line 78
    def dist((x1, y1), (x2, y2)):
             ^^^^^^^^
SyntaxError: Function parameters cannot be parenthesized
=== End of logs for 9655195 ===
[2025-10-29 18:29:06] INFO: Container 0b52f8a2fff6be3ac3806772caff8100f80d94c66fb5193edc904189802305e8 has stopped
